--- a/client/src/app/components/event/event.component.html
+++ b/client/src/app/components/event/event.component.html
@@ -34,8 +34,10 @@
               </div>
             </div>
             <div class="row d-flex mt-5 justify-content-around">
-              <button type="button" mdbBtn color="{{!isSubscribed() ? 'success' : 'dark-green'}}" (click)="subscribe()" mdbWavesEffect>{{isSubscribed() ? "Відписатися" :"Підписатися"}}</button>
-              <button mdbBtn type="button" color="info" outline="true" mdbWavesEffect>Донат</button>
+              <button type="button" mdbBtn color="{{!isSubscribed() ? 'success' : 'dark-green'}}" (click)="subscribe()"
+                mdbWavesEffect>{{isSubscribed() ? "Відписатися" :"Підписатися"}}</button>
+              <button mdbBtn type="button" color="info" outline="true" mdbWavesEffect
+                (click)="onDonationClick()">Донат</button>
             </div>
           </div>
         </div>
@@ -58,9 +60,7 @@
 
         <div class="comment row">
           <div class="comment-image col-lg-1 col-md-2 col-sm-2 col-4">
-            <img style="border-radius: 50%;"
-              src="../../../assets/ava.png"
-              alt="user avatar">
+            <img style="border-radius: 50%;" src="../../../assets/ava.png" alt="user avatar">
           </div>
           <div class="comment-body col-lg-11 col-md-10 col-sm-8 col-8">
             <div class="col">
@@ -81,9 +81,7 @@
       <li class="list-group-item list-group-item-action">
         <div class="comment row">
           <div class="comment-image col-lg-1 col-md-2 col-sm-2 col-4">
-            <img style="border-radius: 50%;"
-              src="../../../assets/ava.png"
-              alt="user avatar">
+            <img style="border-radius: 50%;" src="../../../assets/ava.png" alt="user avatar">
           </div>
           <div class="comment-body col-lg-11 col-md-10 col-sm-8 col-8">
             <div class="col">
@@ -137,6 +135,44 @@
       <div class="modal-footer">
         <button mdbBtn type="button" color="default" outline="true" mdbWavesEffect (click)="onReportConfirmed()">Подати
           скаргу</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div mdbModal #donateModal="mdbModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myBasicModalLabel"
+  aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <div class="col">
+          <div class="container text-center" *ngIf="loadingPayment">
+            <h3>Платіж у процесі</h3>
+            <div class="spinner-grow" style="width: 3rem; height: 3rem;" role="status">
+              <span class="sr-only">Loading...</span>
+            </div>
+          </div>
+          <div class="container" *ngIf="!loadingPayment">
+
+            <div class="row">
+              <h3>
+                Введіть бажану суму пожертвування
+              </h3>
+            </div>
+            <div class="row">
+              <div class="md-form">
+                <label for="donation">Сумма</label>
+                <input type="text" id="donation" [(ngModel)]="donation" mdbInput>
+              </div>
+            </div>
+            <div class="row">
+              <button type="submit" color="info" class="btn btn-outline-success waves-effect"
+                (click)="onDonationConfirm()">Пожертвувати</button>
+            </div>
+          </div>
+        </div>
+
+
       </div>
     </div>
   </div>
